<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <TextView
        style="@style/LogoText1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/logo_text_1"
        android:id="@+id/textView4"
        android:gravity="bottom"
        android:paddingBottom="4dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/mir_play_logo"
        android:contentDescription="@string/main_logo_desc"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="3dp" />

    <TextView
        style="@style/LogoText2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logo_text_2"
        android:id="@+id/textView5"
        android:typeface="sans"
        android:gravity="bottom"
        android:paddingBottom="4dp" />
</LinearLayout>