<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="tv.mir24.mirlive.fragments.HeaderFragment"
        android:id="@+id/fragment"
        tools:layout="@layout/header"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/aboutBtn"
        android:layout_below="@+id/fragment">
        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pagerTabStrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/abc_button_padding_vertical_material"
            android:alpha="0.9"
            android:background="@color/colorPrimaryDark"
            android:paddingTop="10dp"
            style="@style/LightTextWithShadow">
        </android.support.v4.view.PagerTitleStrip>
    </android.support.v4.view.ViewPager>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_btn_text"
        android:id="@+id/aboutBtn"
        android:alpha="0.9"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@string/abc_font_family_button_material"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        style="@style/LightTextWithShadow"
        android:typeface="sans" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/playLayout"
        android:visibility="visible"
        android:layout_above="@+id/aboutBtn"
        android:paddingTop="30dp"
        android:layout_below="@+id/fragment">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="135dp"
            android:id="@+id/logo"
            android:src="@drawable/empty_logo"
            android:contentDescription="@string/image_of_empty_logo"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageButton
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playBtn"
            android:src="@drawable/radio_play_btn"
            android:cropToPadding="false"
            android:contentDescription="@string/radio_play_btn"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loadingBar"
            android:indeterminateDrawable="@drawable/spinner_ring_light"
            android:indeterminateOnly="true"
            android:indeterminate="false"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/watch_now_text"
            android:id="@+id/watchLabel"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:typeface="serif"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>